--- a/PFinal/Mibuspuntano/Mibuspuntano.csproj
+++ b/PFinal/Mibuspuntano/Mibuspuntano.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Context.cs" />
     <Compile Include="Models\Taxi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
