--- a/PFinal/Mibuspuntano/Mibuspuntano.csproj
+++ b/PFinal/Mibuspuntano/Mibuspuntano.csproj
@@ -138,9 +138,10 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\TaxisController.cs" />
-	    <Compile Include="Global.asax.cs">
+    <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\paaraconfirmarcambios.cs" />
     <Compile Include="Models\PosicionGoogle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
