--- a/PFinal/Mibuspuntano/Mibuspuntano.csproj
+++ b/PFinal/Mibuspuntano/Mibuspuntano.csproj
@@ -114,23 +114,33 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Images\bicicleta.png" />
+    <Content Include="Images\colectivo.jpg" />
     <Content Include="Images\g.png" />
     <Content Include="Images\hombrecito.jpg" />
     <Content Include="Images\taxi.jpg" />
     <Content Include="Images\colectivo.png" />
+    <Content Include="Images\taxi_logo.gif" />
+    <Content Include="Images\taxi_logo.jpg" />
+    <Content Include="Images\ugarte10.png" />
     <Content Include="Scripts\botones.js" />
     <Content Include="Scripts\busquedadelugar.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.map" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\geo.js" />
     <Content Include="Scripts\jmelosegui.googlemap.js" />
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <None Include="Scripts\jquery-2.1.4-vsdoc.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
+    <Content Include="Scripts\Mapa.js" />
     <Content Include="Scripts\markerclusterer.js" />
-    <Content Include="Scripts\rutas.js" />
+    <Content Include="Scripts\prueba.js" />
+    <Content Include="Scripts\ruta.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\Preciotaxi.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
@@ -155,7 +165,9 @@
     <Content Include="Views\Home\Map.cshtml" />
     <Content Include="Views\Map\Mapa.cshtml" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
-    <Content Include="Views\Map\Map.cshtml" />
+    <Content Include="Views\Map\Mapa.cshtml">
+      <SubType>Code</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
